# f5kb-python

./: .gitignore  .samignore  CLAUDE.md  CONSUMER_GUIDE.md  FINDINGS.txt  HOWTO.txt  MASTER_PIPELINE_DOC.md  MEMORIES.md  Makefile  OUTLINE.md  OUTLINE.txt  README.md  README.txt  TODO.md  TODO.txt  available_fields.txt  config.yaml  deno.json  discover_products.ts  dump_articles.ts  dump_config.yaml  enrich_bodies.ts  f5kb.ts  fetch_f5_articles.ts  fetch_f5_articles_flex.ts  fetch_recent_by_type.ts  findings.md  investigate.py  pyproject.toml  readme.txt  run_tests.sh  samconfig.example.toml  sitemap_gap_ids.txt  sitemap_note.txt  supplemental_products.json  template.yaml  track_articles.ts
cmd/: approve.ts  discover.ts  dump.ts  enrich.ts  fetch.ts  list_products.ts  list_types.ts  recent.ts  status.ts  track.ts
docs/: DEPLOYMENTS.md  MASTER_PIPELINE_DOC.md  MEMORIES.md  OUTLINE.md  TEST_GUIDE.md  TODO.md
f5kb/: Makefile  README.md
f5kb/cmd/: approve.py  discover.py  dump.py  enrich.py  fetch.py  list_products.py  list_types.py  recent.py  reconcile.py  status.py  sync.py  track.py
f5kb/config/: loader.py
f5kb/enrich/: enrichers.py
f5kb/handlers/: __init__.py  approve.py  dump.py  enrich.py  orchestrator.py  restore.py  slack_ack.py  (+2 more)
layer/: Makefile  requirements.txt
lib/: approve.ts  args.ts  fsutil.ts  logger.ts  progress.ts  staging.ts  status.ts  version.ts
python/: pyproject.toml
scripts/: deploy.sh  record_deploy.py  sync_lambda_config.py
tests/: README.md
ui/: README.md  config.example.yaml  playbook.md  readers.py  runview.py  server.py
(+60 files in other folders)
