[project]
name = "f5kb"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "pyyaml>=6.0",
    "boto3>=1.34",
]

[project.scripts]
f5kb = "f5kb.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q -m 'not live'"
markers = ["live: requires live Coveo network access (use pytest -m live to run)"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
    "moto[s3,sqs]>=5.0",
    "types-boto3-s3>=1.34",
]
# Local dashboard only (ui/server.py). Never shipped to Lambda.
ui = [
    "fastapi>=0.110",
    "markdown>=3.10.2",
    "uvicorn>=0.29",
]

[[tool.mypy.overrides]]
module = ["boto3", "boto3.*", "botocore", "botocore.*"]
ignore_missing_imports = true

[tool.ruff]
exclude = ["config.yaml"]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
